Fix leak in view_setup_fonts()

The following two valgrind reports should be fixed by this patch:

==17510== 12 bytes in 1 blocks are definitely lost in loss record 664 of 9,665
==17510==    at 0x4C221A7: malloc (vg_replace_malloc.c:195)
==17510==    by 0x7BAC232: g_malloc (gmem.c:131)
==17510==    by 0x7BC3CFD: g_strdup (gstrfuncs.c:102)
==17510==    by 0x5044E96: split_font_string (dh-util.c:575)
==17510==    by 0x5044EE7: dh_util_font_get_fixed (dh-util.c:647)
==17510==    by 0x5045066: view_setup_fonts (dh-util.c:683)
==17510==    by 0x504627F: window_open_new_tab (dh-window.c:1194)
==17510==    by 0x5047BCC: dh_window_new (dh-window.c:902)
==17510==    by 0x504067D: dh_base_new_window (dh-base.c:441)
==17510==    by 0x4020E7: main (dh-main.c:286)

and

==17510== 11 bytes in 1 blocks are definitely lost in loss record 583 of 9,665
==17510==    at 0x4C221A7: malloc (vg_replace_malloc.c:195)
==17510==    by 0x7BAC232: g_malloc (gmem.c:131)
==17510==    by 0x7BC3CFD: g_strdup (gstrfuncs.c:102)
==17510==    by 0x5044E96: split_font_string (dh-util.c:575)
==17510==    by 0x5044F97: dh_util_font_get_variable (dh-util.c:615)
==17510==    by 0x5045053: view_setup_fonts (dh-util.c:681)
==17510==    by 0x504627F: window_open_new_tab (dh-window.c:1194)
==17510==    by 0x5047BCC: dh_window_new (dh-window.c:902)
==17510==    by 0x504067D: dh_base_new_window (dh-base.c:441)
==17510==    by 0x4020E7: main (dh-main.c:286)

https://bugzilla.gnome.org/show_bug.cgi?id=596808